fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/Contract_Header__c.object-meta.xml
<CustomObject>
    <label>Contract Header</label>
    <nameField>
        <label>Contract Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Headers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>