fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Account_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Count__c</fullName>
    <description>Roll-up of all the related &apos;Contract Customer&apos; records used to determine limits when displaying in Visualforce.</description>
    <inlineHelpText>Roll-up of all the related &apos;Contract Customer&apos; records used to determine limits when displaying in Visualforce.</inlineHelpText>
    <label>Account Count</label>
    <summaryForeignKey>Contract_Customer__c.Agreement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>