fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <externalId>true</externalId>
    <label>Agreement Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>