fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Alt_UI__c.field-meta.xml
<CustomField>
    <fullName>Alt_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Agreements that have a large number of related Contract Materials that cause the standard code to hit the 10k collection and/or 50k list limits.</description>
    <inlineHelpText>Used for Agreements that have a large number of related Contract Materials that cause the standard code to hit the 10k collection and/or 50k list limits.</inlineHelpText>
    <label>Alt UI</label>
    <type>Checkbox</type>
</CustomField>