fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Contract_Detail__c.field-meta.xml
<CustomField>
    <fullName>Contract_Detail__c</fullName>
    <label>Contract Detail</label>
    <type>TextArea</type>
</CustomField>