fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Contract_Renewal_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Eligible__c</fullName>
    <formula>NOT(
OR(
Sub_Group__c = &quot;6&quot;,
Sub_Group__c = &quot;5&quot;,
Sub_Group__c = &quot;3&quot;,
Sub_Group__c = &quot;1&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Renewal Eligible</label>
    <type>Checkbox</type>
</CustomField>