fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Division_10__c.field-meta.xml
<CustomField>
    <fullName>Division_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Division 10</label>
    <type>Checkbox</type>
</CustomField>