fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Division_20__c.field-meta.xml
<CustomField>
    <fullName>Division_20__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Division 20</label>
    <type>Checkbox</type>
</CustomField>