fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Division_30__c.field-meta.xml
<CustomField>
    <fullName>Division_30__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Division 30</label>
    <type>Checkbox</type>
</CustomField>