fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Divisions__c.field-meta.xml
<CustomField>
    <fullName>Divisions__c</fullName>
    <formula>IF( Division_10__c , &quot;10 &quot; , &quot;&quot; ) + IF( Division_20__c , &quot;20 &quot; , &quot;&quot; ) + IF( Division_30__c , &quot;30 &quot; , &quot;&quot; ) + IF( Division_40__c , &quot;40 &quot; , &quot;&quot; ) + IF( Division_50__c , &quot;50 &quot; , &quot;&quot; ) + IF( Division_60__c , &quot;60 &quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Divisions</label>
    <type>Text</type>
</CustomField>