fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/GPO_Contract__c.field-meta.xml
<CustomField>
    <fullName>GPO_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Apex job checks that this is a &apos;GPO&apos; contract.</inlineHelpText>
    <label>GPO Contract</label>
    <type>Checkbox</type>
</CustomField>