fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>Objective_Name__c</fullName>
    <formula>if(RIGHT(Objective__c,1) = &quot;1&quot;, &quot;Direct/Rebate&quot;, 
if(RIGHT(Objective__c,1) = &quot;2&quot;, &quot;Direct&quot;, 
if(RIGHT(Objective__c,1) = &quot;3&quot;, &quot;Distributor Netbill&quot;, 
if(RIGHT(Objective__c,1) = &quot;4&quot;, &quot;Specialty Market&quot;, 
if(RIGHT(Objective__c,1) = &quot;5&quot;, &quot;Strategic Accounts&quot;, 
if(RIGHT(Objective__c,1) = &quot;6&quot;, &quot;Rebate Only&quot;, 
&quot;Not Defined&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Name</label>
    <type>Text</type>
</CustomField>