fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Parent_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract_Name__c</fullName>
    <formula>if(
OR(
RIGHT(GPO_Contract_Ref__c,2) = &quot;-T&quot;,
RIGHT(GPO_Contract_Ref__c,2) = &quot;-R&quot;,
RIGHT(GPO_Contract_Ref__c,2) = &quot;-M&quot;,
RIGHT(GPO_Contract_Ref__c,2) = &quot;-D&quot;
),
UPPER(TRIM(LEFT(Description__c,LEN(Description__c)-2))),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Contract Name</label>
    <type>Text</type>
</CustomField>