fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Parent_GPO_Contract_Ref__c.field-meta.xml
<CustomField>
    <fullName>Parent_GPO_Contract_Ref__c</fullName>
    <formula>if(
OR(
RIGHT(GPO_Contract_Ref__c,2) = &quot;-T&quot;,
RIGHT(GPO_Contract_Ref__c,2) = &quot;-R&quot;,
RIGHT(GPO_Contract_Ref__c,2) = &quot;-M&quot;,
RIGHT(GPO_Contract_Ref__c,2) = &quot;-D&quot;
),
LEFT(GPO_Contract_Ref__c,LEN(GPO_Contract_Ref__c)-2),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent GPO Contract Ref</label>
    <type>Text</type>
</CustomField>