fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <formula>AND(
Sub_Group__c = &quot;8&quot;,
OR(
RIGHT(GPO_Contract_Ref__c,2) = &quot;-D&quot;,
RIGHT(GPO_Contract_Ref__c,2) = &quot;-M&quot;,
RIGHT(GPO_Contract_Ref__c,2) = &quot;-R&quot;,
AND(RIGHT(GPO_Contract_Ref__c,2) = &quot;-N&quot;, Sales_Org__c = &quot;CA10&quot;),
RIGHT(GPO_Contract_Ref__c,3) = &quot;-VP&quot;
),
Owner__c = &quot;123310&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Filters Contracts based on Group 8, GPO Ref ending in -R, -M, or -D and the owner being 123310 / Teleflex</inlineHelpText>
    <label>Pricing Tier</label>
    <type>Checkbox</type>
</CustomField>