fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Pricing_Tier_Access__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_Access__c</fullName>
    <inlineHelpText>Pulls from the max level from Contract Material through a trigger.
1 = “Pricing Tier 1 - Rep&quot; 
2 = “Pricing Tier 2 - Manager&quot; 
3 = “Pricing Tier 3 - Director&quot; 
4 = “Pricing Tier 4 - VP&quot;</inlineHelpText>
    <label>Pricing Tier Access</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>