fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Pricing_Tier_Access_Check__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_Access_Check__c</fullName>
    <formula>Pricing_Tier_Access__c &lt;&gt; Pricing_Tier_Access_Debug__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked TRUE if Pricing Tier Access (Roll-Up of CM) is the same as Pricing Tier Access Debug (Looking at the GPO Ref)</inlineHelpText>
    <label>Pricing Tier Access Check</label>
    <type>Checkbox</type>
</CustomField>