fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Pricing_Tier_Access_Debug__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_Access_Debug__c</fullName>
    <formula>if(RIGHT(GPO_Contract_Ref__c,3) = &quot;-VP&quot;, 4,
if(RIGHT(GPO_Contract_Ref__c,2) = &quot;-D&quot;, 3,
if(RIGHT(GPO_Contract_Ref__c,2) = &quot;-M&quot;, 2,
if(RIGHT(GPO_Contract_Ref__c,2) = &quot;-R&quot;, 1,
if(AND(RIGHT(GPO_Contract_Ref__c,2) = &quot;-N&quot;, Sales_Org__c = &quot;CA10&quot;), 1,
NULL
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Tier Access Debug</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>