fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Pricing_Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_Level__c</fullName>
    <description>CASE( Pricing_Tier_Access__c, 
1, &quot;REP&quot;, 
2, &quot;RSM&quot;,
3, &quot;DIR&quot;,
4, &quot;VP&quot;,
NULL
)</description>
    <formula>IF(
AND(Pricing_Tier_Access__c = 1,  CONTAINS(GPO_Contract_Ref__c,&quot;-N&quot; ) ),&quot;National Tier&quot;,
IF(
Pricing_Tier_Access__c = 1, &quot;REP&quot;,
IF(
Pricing_Tier_Access__c = 2, &quot;RSM&quot;,
IF(
Pricing_Tier_Access__c = 3, &quot;DIR&quot;,
IF(
Pricing_Tier_Access__c = 4, &quot;VP&quot;,&quot;REP&quot;
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Tier Level</label>
    <type>Text</type>
</CustomField>