fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/fields/Tactic__c.field-meta.xml
<CustomField>
    <fullName>Tactic__c</fullName>
    <label>Tactic</label>
    <length>2</length>
    <type>Text</type>
</CustomField>