fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Owner__c</columns>
    <columns>NAME</columns>
    <columns>Account_Count__c</columns>
    <columns>Active__c</columns>
    <columns>Active_Future__c</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Alt_UI__c</columns>
    <columns>Contract_Detail__c</columns>
    <columns>Description__c</columns>
    <columns>Distribution_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>