fullSandbox11072023/force-app/main/default/objects/Contract_Header__c/listViews/Divisions.listView-meta.xml
<ListView>
    <fullName>Divisions</fullName>
    <columns>NAME</columns>
    <columns>Division_10__c</columns>
    <columns>Division_20__c</columns>
    <columns>Division_30__c</columns>
    <columns>Division_40__c</columns>
    <columns>Division_50__c</columns>
    <columns>Division_60__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Divisions</label>
    <language>en_US</language>
</ListView>